No Compression Build

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </div>
         </div>
     </div>
-    <script src="Build/Web-AR-Jar.loader.js"></script>
+    <script src="Build/NoCompBuild.loader.js"></script>
     <script>
             var container = document.querySelector("#unity-container");
             var canvas = document.querySelector("#unity-canvas");
@@ -73,9 +73,9 @@
                 document.getElementById("startWebcamDiv").style.display = "none";
 
                 createUnityInstance(document.querySelector("#unity-canvas"), {
-                    dataUrl: "Build/Web-AR-Jar.data.gz",
-                    frameworkUrl: "Build/Web-AR-Jar.framework.js.gz",
-                    codeUrl: "Build/Web-AR-Jar.wasm.gz",
+                    dataUrl: "Build/NoCompBuild.data",
+                    frameworkUrl: "Build/NoCompBuild.framework.js",
+                    codeUrl: "Build/NoCompBuild.wasm",
                     streamingAssetsUrl: "StreamingAssets",
                     companyName: "DefaultCompany",
                     productName: "Web AR",
